--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://UnmeshPatra:uHYN9mo3wVMBTdV3@cluster0.pz1jvcm.mongodb.net/PayToMe?retryWrites=true&w=majority
+JWT_SECRET=unmeshsecret
